feat login , register layout complete

--- a/src/views/home/home.html
+++ b/src/views/home/home.html
@@ -66,15 +66,14 @@
         </div>
       </div>
     </nav>
-
-    <div class="div-container">
+    <!-- <div class="div-container">
       <div class="landing" id="landingDiv">
         <h1>랜딩 페이지</h1>
       </div>
       <div class="greeting" id="greetingDiv">
         <h1>안녕하세요!</h1>
       </div>
-    </div>
+    </div> -->
 
   </body>
 </html>
