--- a/src/views/login/login.html
+++ b/src/views/login/login.html
@@ -96,11 +96,21 @@
             />
           </div>
         </div>
-
+        <div class="id-pw-find-wrap">
+          <div class="id-find">아이디 찾기</div>
+          <span class="bar"></span>
+          <div class="pw-find">비밀번호 찾기</div>
+        </div>
+        
         <button class="button is-info is-fullwidth" id="submitButton">
           로그인하기
         </button>
+        <!-- 회원가입 하는 곳으로 링크를 달아야한다. -->
+        <button class="button is-info is-fullwidth btn-register">
+          회원가입하기
+        </button>
+      </div>
       </form>
-    </div>
+
   </body>
 </html>
