--- a/src/views/register/register.css
+++ b/src/views/register/register.css
@@ -27,3 +27,25 @@
 .radio-items{
   flex-grow: 1;
 }
+
+.address-btn-wrap{
+  display: flex;
+}
+/* 왜 3:1의 비율이 안먹히는지 잘 모르겠음 */
+.address-btn-wrap:nth-child(1){
+  flex-grow: 3;
+}
+.address-btn-wrap:nth-child(2){
+  flex-grow: 1;
+}
+
+.address-detail-wrap{
+  display: flex;
+}
+
+.input-id-wrap:nth-child(1){
+  flex-grow: 3;
+}
+.input-id-wrap:nth-child(2){
+  flex-grow: 1;
+}
