--- a/src/views/home/home.css
+++ b/src/views/home/home.css
@@ -1,30 +1,134 @@
+* {
+  margin:0;
+  padding:0;
+}
+ul, li {
+  list-style:none;
+}
+
 /* header */
-
-
+/* 
+.navbar .container .navbar-brand .navbar-item .has-text-link {
+  color: black;
+} */
 #navbar_menu {
   display: flex;
+  justify-content: center;
+  ;
 }
-/* .menu_main {
-  display: flex;
-} */
+.menu_main a {
+  color: black;
+}
+
 .menu_list {
   display: flex;
 }
-
+.menu_list .menu {
+  margin: 30px 70px;
+  font-size: 16px;
+  font-weight: 700;
+  white-space: nowrap;
+  /* padding: 16px 0 0 0; */
+}
+.menu_list .menu a:hover {
+  color: #68a790;
+  background-color: transparent;
+  text-decoration: underline;
+}
 .search {
   display:flex;
+  position: relative;
+}
+.search_box {
+  width: 200px;
+  height: 36px;
+  border: 1px solid #f7f7f7;
+  border-radius: 18px;
+  background-color: #f7f7f7;
+  padding: 0 60px 0 14px;
+  font-size: 12px;
+  color: #555;
+  margin: auto;
+  
 }
 #search_btn {
-  /* position: absolute; */
-  
+  width: 35px;
+  height: 35px;
+  margin: auto;
+  position: absolute;
+  right: 5px;
+  top: 25px;
+} 
+#search_btn img {
+  /* opacity: 0.5; */
+}
+.navbar-end a {
+  color: black;
 }
 
 /* main */
 .div-container {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  /* display: flex; */
+  /* align-items: center;
+  justify-content: center; */
   height: 100vh;
+  width: 100vw;
+  padding: 0px;
+  margin: 0px;
+}
+
+#slider_wrap {
+  position: relative;
+  text-align: center;
+  border: 1px solid #f7f7f7;
+  padding-bottom: 120px;
+}
+#slider_wrap #slider .slide {
+  display: none;
+}
+#slider_wrap #slider .active {
+  display: block;
+}
+
+#slider_wrap #slider .slide img {
+  width: 100%;
+  height: 370px;
+}
+
+.right_arrow {
+  position: absolute;
+  top: 150px;
+  right: 250px;
+  background-color: transparent;
+  width: 52px;
+  height: 52px;
+  border: none;
+  background-image: url('https://s3.ap-northeast-2.amazonaws.com/res.kurly.com/kurly/ico/2021/arrow_banner_right_52_52.svg');
+  cursor: pointer;
+}
+.left_arrow {
+  position: absolute;
+  top: 150px;
+  left: 250px;
+  background-color: transparent;
+  background-image: url(https://s3.ap-northeast-2.amazonaws.com/res.kurly.com/kurly/ico/2021/arrow_banner_left_52_52.svg);
+  border: none;
+  width: 52px;
+  height: 52px;
+  cursor: pointer;
+}
+#slide_count {
+  position: absolute;
+  background-color: rgba(0,0,0,0.15);
+  font-weight: 400;
+  width: 40px;
+  height: 20px;
+  color: white;
+  font-size: 15px;
+  line-height: 20px;
+  top: 320px;
+  right: 250px;
+  border-radius: 12px;
 }
 
 .landing {
@@ -40,19 +144,63 @@
   margin-left: 3rem;
 }
 
+.footer {
+  margin: 0 15vw 0 15vw;
+  padding:0;
+  align-items: flex-start;
+}
 #custom_center_wrap {
   text-align: center;
+
+  margin: 0 0 10px 0;
 }
 .center_h2 {
-  font-size: 20pt;
+  font-size: 16pt;
+  font-weight:700;
+  padding-bottom: 29px;
 }
 
-#call_wrap {
+#call_wrap,
+#question_wrap {
   display: flex;
+  margin: 10px 16px 0 0;
 }
 
-#right_call_wrap {
+#call_wrap .call_title_wrap,
+#question_wrap .question_title_wrap
+{
+  text-align: center;
+  line-height: 40px;
+  height: 40px;
+  width: 140px;
+  border: 1px solid #e3e3e3;
+  border-radius: 3px;
 
+}
+#call_wrap .call_title_wrap{
+  border: none;
+  
+}
+#call_wrap .call_title_wrap .call {
+  /* font-size:1.7rem; */
+  font-size: 27px;
+  font-weight: 700;
+  white-space: nowrap;
+}
+#question_wrap .question_title_wrap .cc_qna{
+  font-size:14px;
+  font-weight: 700;
+  white-space: nowrap;
+}
+
+#right_call_wrap,
+#right_question_wrap{
+  padding-left: 10px;
+  white-space: nowrap;
+}
+#right_call_wrap .detail,
+#right_question_wrap .detail{
+  color: #999;
 }
 
 #introduce_wrap {
@@ -61,20 +209,24 @@
 
 .introduce_list {
   display: flex;
+  justify-content: space-around;
+  padding-bottom: 29px;
 }
 .footer {
   display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  font-weight: 500;
+  font-size: 14px;
+
 }
 
 /* 고객 행복센터 및 멤버소개 */
-.footer_left,
-.footer_right {
-  flex-grow: 1;
-}
 .footer_p {
   margin-top: 0px;
   margin-bottom: 0px;
   color: #999999;
   font-size: 12px;
   padding-bottom: 6px;
+  white-space: nowrap;
 }
