--- a/src/views/home/home.html
+++ b/src/views/home/home.html
@@ -34,7 +34,7 @@
           <div class="navbar-brand">
             <a class="navbar-item" href="/">
               <img src="/elice-rabbit.png" width="30" height="30" />
-              <span class="has-text-link">쇼핑-n팀</span>
+              <span class="has-text-link">쇼핑-9팀</span>
             </a>
             <a
               role="button"
@@ -68,34 +68,34 @@
       <div id="navbar_menu">
         <div class="menu_main">
           <ul class="menu_list">
-            <li class="menu1">
+            <li class="menu menu1">
               <a href="#">
                 <img width="16px" height="14px" src="https://res.kurly.com/pc/service/common/1908/ico_gnb_all_off_x2.png" alt=""> 
                 <!-- toggle icon -->
                 <span class="text">전체 카테고리</span>
               </a>
             </li>
-            <li class="menu2">
+            <li class="menu menu2">
               <a href="#">고기</a>
             </li>
-            <li class="menu3">
+            <li class="menu menu3">
               <a href="#">채소</a>
             </li>
-            <li class="menu4">
+            <li class="menu menu4">
               <a href="#">과일</a>
             </li>
-            <li class="menu5">
+            <li class="menu menu5">
               <a href="#">생선</a>
             </li>
           </ul>
         </div>
           
-        <div class="menu_toggle">
+        <!-- <div class="menu_toggle">
           토글메뉴
-        </div>
+        </div> -->
 
         <div class="search">
-          <input type="text" placeholder="검색어를 입력해주세요">
+          <input type="text" placeholder="검색어를 입력해주세요" class="search_box">
           <div id="search_btn">
             <img src="https://res.kurly.com/pc/service/common/1908/ico_search_x2.png" alt="">
             <!-- search icon -->
@@ -104,33 +104,39 @@
 
       </div>
       
-      <button class="left_arrow"></button>
-      <div class="slider">
-        <ul class="slides">
-          <li class="slide"><img src="" alt="first"></li>
-          <li class="slide"><img src="" alt="second"></li>
-          <li class="slide"><img src="" alt="third"></li>
-          <li class="slide"><img src="" alt="first"></li>      
-        </ul>
-      </div>
-      <button class="right_arrow"></button>
+ 
     </div>
 
       
     <!-- main -->
     <div class="div-container">
-      <div class="landing" id="landingDiv">
+      
+      <!-- <div id="slider_wrap">
+        <div id="slider">
+          <div class="slide active"><img src="1.jpg" alt=""></div>
+          <div class="slide"><img src="2.jpg" alt=""></div>
+          <div class="slide"><img src="3.jpg" alt=""></div>
+          <div class="slide"><img src="4.jpg" alt=""></div>
+        </div>
+        <button class="left_arrow"></button>
+        <button class="right_arrow"></button>
+        <div id="slide_count"><span class="cnt">1</span>/4</div>
+      </div> -->
+
+    </div>
+
+      <!-- <div class="landing" id="landingDiv">
         <h1>랜딩 페이지</h1>
       </div>
       <div class="greeting" id="greetingDiv">
         <h1>안녕하세요!</h1>
-      </div>
+      </div> -->
     </div>
     
     <!-- footer -->
     <footer class="footer">
-      <div id="customer_center_wrap" class="footer_left">
-        <h2 class="center_h2">고객 행복 센터</h2>
+      <div id="customer_center_wrap">
+        <h2 class="center_h2">고객행복센터</h2>
 
         <div id="call_wrap">
           <div class="call_title_wrap">
@@ -138,22 +144,22 @@
           </div>
           <div id="right_call_wrap">
             <p class="customer">365고객센터</p>
-            <p class="time">오전 7시 - 오후 7시</p>
+            <p class="detail">오전 7시 - 오후 7시</p>
           </div>
         </div>
 
-        <div id="call_wrap">
+        <div id="question_wrap">
           <div class="question_title_wrap">
-            <h3 class="cc-qna">1:1 문의</h3>
+            <h3 class="cc_qna">1:1 문의</h3>
           </div>
-          <div id="right_call_wrap">
+          <div id="right_question_wrap">
             <p class="customer">365고객센터</p>
-            <p class="time">고객센터 운영시간에 순차적으로 답변해드리겠습니다.</p>
+            <p class="detail">고객센터 운영시간에 순차적으로 답변해드리겠습니다.</p>
           </div>
         </div>
       </div>
 
-      <div id="introduce_wrap" class="footer_right">
+      <div id="introduce_wrap" >
         <ul class="introduce_list">
           <li>컬리소개</li>
           <li>컬리소개영상</li>
@@ -169,7 +175,7 @@
   
       </div>
     </footer>
-    
+    <script src="imageSlider.js"></script>
   </body>
 
 </html>
