--- a/src/views/product-detail/product-detail.html
+++ b/src/views/product-detail/product-detail.html
@@ -183,16 +183,16 @@
 
             <!-- 바로구매, 장바구니 버튼 -->
             <div id="btn_zone">
-              <button id="btn_buy_now" class="button is-medium is-rounded" onclick="location.href='.html'">바로 구매</button> 
-              <button id="btn_add_to_cart" class="button is-medium is-rounded" onclick="location.href='.html'">장바구니 담기</button>
+              <button id="btn_buy_now" class="button is-medium" onclick="location.href='.html'">바로 구매</button> 
+              <button id="btn_add_to_cart" class="button is-medium" onclick="location.href='.html'">장바구니 담기</button>
             </div>
           </div>
       </div>
 
       <nav>
         <div id="move_to">
-            <div class="item"><a class="button" href="#product_detail">제품 상세</a></div>
-            <div class="item"><a class="button" href="#product_review">제품 리뷰</a></div>
+            <div class="item"><a class="button is-rounded" href="#product_detail">제품 상세</a></div>
+            <div class="item"><a class="button is-rounded" href="#product_review">제품 리뷰</a></div>
         </div>
     </nav>
       <!-- 제품 상세 -->
