js 상품 데이터 받아오기, 장바구니 페이지로 데이터 넘겨주기 뼈대 완료

--- a/src/views/product-detail/product-detail.css
+++ b/src/views/product-detail/product-detail.css
@@ -261,6 +261,7 @@ div.product_card_right {
 #product_name {
   font-weight: 600;
   font-size: 40px;
+  margin-bottom: 20px;
 }
 
 div.product_price_zone {
