--- a/src/views/register/register.html
+++ b/src/views/register/register.html
@@ -94,18 +94,18 @@
             />
           </div>
         </div>
-
+        <!-- 임시로 input-email 변경했음 -->
         <div class="field">
           <label class="label" for="idInput">아이디</label>
           <div class="control input-id-wrap">
-            <input 
-              class="input" 
+            <input
+              class="input"
               id="emailInput"
               type="email"
               placeholder="abc@example.com"
               autocomplete="on"
             />
-            <input class="input" type="button" value="중복확인"><br>
+            <!-- <input class="input" type="button" value="중복확인"><br> -->
           </div>
         </div>
 
