--- a/src/views/product-detail/product-detail.html
+++ b/src/views/product-detail/product-detail.html
@@ -127,11 +127,15 @@
           <div class="product_card_right">
 
             <!-- 제품명 -->
-            <p id="product_name"> 제품명 </p>
+            <div class="name_zone">
+              <p id="product_name"> </p>
+              <!-- 제품 수정 버튼: 유저가 관리자일 경우 보이게 -->
+              <button id="btn_product_edit" class="button is-medium">제품 수정</button>
+            </div>
 
             <!-- 가격 -->
             <div class="product_price_zone">
-              <span id="product_price"> 1 </span>
+              <span id="product_price"> </span>
               <span class="won">원</span>
             </div>
             
@@ -139,7 +143,7 @@
             <dl class="list">
               <dt>제조사</dt>
               <dd>
-                <p id="product_company"> 제조사 </p>
+                <p id="product_company"> </p>
               </dd>
             </dl>
             
@@ -147,13 +151,13 @@
             <dl class="list">
               <dt>상품 설명</dt>
               <dd>
-                <p id="product_description"> 상품 설명 </p>
+                <p id="product_description"> </p>
               </dd>
             </dl>
 
             <!-- 구매 수량 -->
             <dl class="list">
-              <dt>구매수량</dt>
+              <dt>구매 수량</dt>
               <dd> 
                 <div class="count">
                   <button id="btn_cnt_down" class="button is-small is-rounded" onclick="count('minus')">
@@ -169,20 +173,21 @@
             
             <!-- 총 상품 금액 -->
             <div id="product_total">
-              <div class="item" id="total">총 상품 금액: </div>
-              <div class="item" id="sum">nnnnn</div>
+              <div class="item" id="sum">총 상품 금액: </div>
+              <div class="item" id="product_total_price"></div>
               <div class="item" id="won">원</div>
             </div>
 
             <!-- 바로구매, 장바구니 버튼 -->
-            <div id="btn_zone">
+            <div class="btn_zone">
               <div class="btn_item">
-                <button id="btn_buy_now" class="button is-medium is-rounded" onclick="buyNow">바로 구매</button>
+                <button id="btn_buy_now" class="button is-medium is-rounded">바로 구매</button>
               </div>
               <div class="btn_item">
-                <button id="btn_add_to_cart" class="button is-medium is-rounded" onclick="addToCart()">장바구니 담기</button>
+                <button id="btn_add_to_cart" class="button is-medium is-rounded">장바구니 담기</button>
               </div>
             </div>
+
           </div>
       </div>
 
