--- a/src/views/product-detail/product-detail.html
+++ b/src/views/product-detail/product-detail.html
@@ -120,7 +120,7 @@
 
         <!-- 상단 제품 정보 내 왼쪽 틀 -->
           <div class="product_card_left">
-            <img id="product_img" src="제품사진">
+            <img id="product_img" src="">
           </div>
 
           <!-- 상단 제품 정보 내 오른쪽 틀 -->
