--- a/src/views/home/home.css
+++ b/src/views/home/home.css
@@ -16,6 +16,12 @@ ul, li {
   justify-content: center;
   ;
 }
+.sticky {
+  position: sticky;
+  top: 0px;
+  background-color: white;
+  z-index: 2;
+}
 .menu_main a {
   color: black;
 }
@@ -71,7 +77,7 @@ ul, li {
   /* display: flex; */
   /* align-items: center;
   justify-content: center; */
-  height: 100vh;
+  /* height: 100vh; */
   width: 100vw;
   padding: 0px;
   margin: 0px;
@@ -94,7 +100,11 @@ ul, li {
   width: 100%;
   height: 370px;
 }
-
+#temp {
+  background-image: url("https://images.unsplash.com/photo-1592686092916-672fa9e86866?crop=entropy&cs=tinysrgb&fm=jpg&ixlib=rb-1.2.1&q=80&raw_url=true&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470");
+  background-position: center;
+  /* transform: scale(0.9); */
+}
 .right_arrow {
   position: absolute;
   top: 150px;
@@ -119,8 +129,8 @@ ul, li {
 }
 #slide_count {
   position: absolute;
-  background-color: rgba(0,0,0,0.15);
-  font-weight: 400;
+  background-color: rgba(0,0,0,0.3);
+  font-weight: 700;
   width: 40px;
   height: 20px;
   color: white;
@@ -131,7 +141,130 @@ ul, li {
   border-radius: 12px;
 }
 
-.landing {
+/* section */
+section {
+  /* display: flex; */
+  position: relative;
+  margin: 40px 0;
+  /* background-color: red; */
+  padding: 32px 0 40px 0;
+  justify-content: center;
+}
+
+#section_title h2{
+  text-align: center;
+  margin: 0 0 25px 0;
+  font-size: 28px;
+  font-weight: 700;
+  /* background-color: blue; */
+}
+
+.promotion {
+  margin: 0 0 200px 0;
+  /* display: flex; */
+  /* flex-direction: column; */
+}
+.gallery_wrap {
+  position: relative;
+  width: 1050px;
+  margin: 0 auto; /* block 상태일때 */
+
+  /* justify-content: center; */
+  /* text-align: center; inline 일 때*/
+  /* background-color: green; */
+  
+}
+.gallery_wrap .section_left_btn {
+  position: absolute;
+  left:-30px;
+  top:135px;
+  z-index: 300;
+  /* opacity: 0.6; */
+  cursor: pointer;
+}
+.gallery_wrap .section_right_btn {
+  position: absolute;
+  right:-30px;
+  top:135px;
+  z-index: 300;
+  /* opacity: 0.6; */
+  cursor: pointer;
+}
+.gallery {
+  display: flex;
+  justify-content: center;
+  /* background-color: yellow; */
+}
+.gallery_item{
+  position: relative;
+  padding: 0 9px;
+}
+
+.shopping_cart {
+  position: absolute;
+  right:20px;
+  bottom: 75px;
+}
+.shopping_cart_icon {
+ background-color: transparent;
+ opacity: 0.8;
+ border: none;
+}
+.shopping_cart_icon img {
+  height: 55px;
+  width: 55px;
+}
+.shopping_cart_icon img:hover {
+  cursor: pointer;
+  transform: scale(1.05);
+}
+
+.thumbnail {
+  width: 250px;
+  height: 320px;
+  overflow: hidden;
+}
+
+.thumbnail a {
+  
+}
+.thumbnail a img {
+  height: 100%;
+  width: 100%;
+  transition: all .3s ease-in-out;
+  /* width: 500px; */
+}
+.thumbnail img:hover {
+  transform: scale(1.1);
+}
+
+.description {
+  /* margin: 0 0 8px 0;   */
+  padding: 14px 10px 0 0;
+}
+.description_text {
+  font-size: 16px;
+  font-weight: 600;
+  display: block;
+  margin: 0 0 8px 0;
+}
+.description_text a{
+  color: rgb(76, 76, 76);
+}
+.description_text a:hover{
+  color: #68a790;
+  text-decoration: underline;
+}
+
+.price {
+  font-size: 16px;
+  font-weight: 700;
+  display: block;
+  color: #4c4c4c
+}
+
+
+/* .landing {
   cursor: pointer;
   border: 1px solid red;
   padding: 10px;
@@ -142,7 +275,7 @@ ul, li {
   border: 1px solid blue;
   padding: 10px;
   margin-left: 3rem;
-}
+} */
 
 .footer {
   margin: 0 15vw 0 15vw;
@@ -219,7 +352,8 @@ ul, li {
   font-weight: 500;
   font-size: 14px;
   padding: 50px;
-  
+  width: 100%;
+  margin: 0;
   
   /* margin: 100px; */
   
