--- a/src/views/cart/cart.html
+++ b/src/views/cart/cart.html
@@ -30,9 +30,8 @@
     <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
     <!-- 커스텀 css, js -->
     <link rel="stylesheet" href="cart.css" />
-   
   </head>
-  <body onload="cartInit()">
+  <body>
     <!-- 헤더 -->
     <nav class="navbar" role="navigation" aria-label="main navigation">
       <div class="container mt-3">
@@ -41,7 +40,6 @@
             <img src="/elice-rabbit.png" width="30" height="30" />
             <span class="has-text-link">쇼핑-데모</span>
           </a>
-
           <a
             role="button"
             class="navbar-burger"
@@ -83,10 +81,14 @@
         <p class="title is-5 has-text-primary">장바구니</p>
         <div class="field">
           <label class="label" for="fullNameInput">상품리스트</label>
-          <div>
-            <input type="checkbox" name="" id="">
-            <span>전체선택</span>
-            <span>선택삭제</span>
+          <div class="checkbox-select-wrap">
+            <div class="checkbox-select">
+              <span class="all-check">전체선택</span>
+                <span class="bar"></span>
+            </div>
+            <div>
+              <span class="select-check">선택삭제</span>
+            </div>
           </div>
           <hr class="hr-items-line">
           <!-- 장바구니의 담겨져 있는 것 들을 전부다 이런 형식으로 담으면 된다. -->
@@ -114,12 +116,12 @@
           </div>
         </div>
         <button class="button is-primary is-fullwidth" id="submitButton">
-          구매하기
+          주문하기
         </button>
       </form>
     </div>
   </body>
-  <script src="cart.js"></script>
   <script src="cartInit.js"></script>
+  <script src="cart.js"></script>
   <script src="cart-test.js"></script>
 </html>
