카테고리별 제품 목록 보여주기 구현

--- a/src/views/fruit/fruit.html
+++ b/src/views/fruit/fruit.html
@@ -24,7 +24,7 @@
     ></script>
     <!-- 커스텀 css, js -->
     <link rel="stylesheet" href="../../product.css" />
-    <!-- <script src="home.js" type="module" defer></script> -->
+    <script src="../../product.js"></script>
   </head>
 
 <body>
@@ -110,7 +110,7 @@
           <h1 class="title">과일</h1>
         </div>
         <div id="list_products">
-          <div class="inner_list_products">
+          <div id="inner_list_products">
                 <div class="item">
                   <div class="thumbnail" >
                     <a href="">
