--- a/src/views/home/home.html
+++ b/src/views/home/home.html
@@ -25,6 +25,7 @@
     <!-- 커스텀 css, js -->
     <link rel="stylesheet" href="home.css" />
     <script src="home.js" type="module" defer></script>
+    
   </head>
   <body>
     <!-- 헤더 -->
@@ -54,7 +55,7 @@
                 <li><a href="/login">로그인</a></li>
                 <li><a href="/register">회원가입</a></li>
                 <li>
-                  <a href="#cart" aria-current="page">
+                  <a href="/cart" aria-current="page">
                     <span class="icon">
                       <i class="fas fa-cart-shopping"></i>
                     </span>
@@ -436,7 +437,7 @@
   
       </div>
     </footer>
-    <script src="imageSlider.js"></script>
+    <!-- <script src="imageSlider.js"></script> -->
   </body>
 
 </html>
