--- a/src/views/product-detail/product-detail.html
+++ b/src/views/product-detail/product-detail.html
@@ -128,14 +128,13 @@
 
             <!-- 제품명 -->
             <div class="name_zone">
-              <p id="product_name"> </p>
-              <!-- 제품 수정 버튼: 유저가 관리자일 경우 보이게 -->
-              <button id="btn_product_edit" class="button is-medium">제품 수정</button>
+              <p id="product_name"></p>
+              <div class="btn_admin_zone"></div>
             </div>
 
             <!-- 가격 -->
             <div class="product_price_zone">
-              <span id="product_price"> </span>
+              <span id="product_price"></span>
               <span class="won">원</span>
             </div>
             
