--- a/src/views/home/home.html
+++ b/src/views/home/home.html
@@ -16,6 +16,12 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css"
     />
+    <!-- Link Swiper's CSS -->
+    <link
+    rel="stylesheet"
+    href="https://unpkg.com/swiper/swiper-bundle.min.css"
+    />
+    
     <!-- 폰트 어썸: 아이콘 -->
     <script
       defer
@@ -24,7 +30,7 @@
     ></script>
     <!-- 커스텀 css, js -->
     <link rel="stylesheet" href="home.css" />
-    <script src="home.js" type="module" defer></script>
+    <!-- <script src="home.js" type="module" defer></script> -->
     
   </head>
   <body>
@@ -78,16 +84,16 @@
               </a>
             </li>
             <li class="menu menu2">
-              <a href="product/meat">고기</a>
+              <a href="/product/meat" id="meat">고기</a>
             </li>
             <li class="menu menu3">
-              <a href="product/vegetable">채소</a>
+              <a href="/product/vegetable" id="vegetable">채소</a>
             </li>
             <li class="menu menu4">
-              <a href="product/fruit">과일</a>
+              <a href="/product/fruit" id="fruit">과일</a>
             </li>
             <li class="menu menu5">
-              <a href="product/fish">생선</a>
+              <a href="/product/fish" id="fish">생선</a>
             </li>
           </ul>
         </div>
@@ -106,14 +112,32 @@
     </div>
 
     <!-- main -->
+
+           <!-- Swiper -->
+    <div class="swiper mySwiper">
+      <div class="swiper-wrapper">
+        <div class="swiper-slide">Slide123123 1</div>
+        <div class="swiper-slide">Slide 2</div>
+        <div class="swiper-slide">Slide 3</div>
+        <div class="swiper-slide">Slide 4</div>
+        <div class="swiper-slide">Slide 5</div>
+        <div class="swiper-slide">Slide 6</div>
+        <div class="swiper-slide">Slide 7</div>
+        <div class="swiper-slide">Slide 8</div>
+        <div class="swiper-slide">Slide 9</div>
+      </div>
+      <div class="swiper-button-next"></div>
+      <div class="swiper-button-prev"></div>
+    </div>
+
     <div class="div-container">
-      
+
       <div id="slider_wrap">
         <div id="slider">
           <div class="slide active"><img id="temp"  alt=""></div>
-          <div class="slide"><img src="2.jpg" alt=""></div>
-          <div class="slide"><img src="3.jpg" alt=""></div>
-          <div class="slide"><img src="4.jpg" alt=""></div>
+          <div class="slide"><img id="temp"  alt=""></div>
+          <div class="slide"><img id="temp"  alt=""></div>
+          <div class="slide"><img id="temp"  alt=""></div>
         </div>
         <button class="left_arrow"></button>
         <button class="right_arrow"></button>
@@ -132,7 +156,7 @@
     <section>
       <div class="promotion">
         <div id="section_title">
-          <h2>이 상품 어때요?</h2>
+          <h2>고기</h2>
         </div>
         
         <div class="gallery_wrap">
@@ -438,6 +462,27 @@
       </div>
     </footer>
     <!-- <script src="imageSlider.js"></script> -->
+    <!-- <script src="../product.js"></script> -->
+    <!-- Swiper JS -->
+    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+
+    <!-- Initialize Swiper -->
+    <script>
+      var swiper = new Swiper(".mySwiper", {
+        navigation: {
+          nextEl: ".swiper-button-next",
+          prevEl: ".swiper-button-prev",
+        },
+      });
+
+      var swiper2 = new Swiper(".mySwiper", {
+        navigation: {
+          nextEl: ".swiper-button-next",
+          prevEl: ".swiper-button-prev",
+        },
+      });
+    </script>
+    </script>
   </body>
 
 </html>
