--- a/src/views/meat/meat.html
+++ b/src/views/meat/meat.html
@@ -24,10 +24,10 @@
     ></script>
     <!-- 커스텀 css, js -->
     <link rel="stylesheet" href="../../product.css" />
-    <script src="../../product.js"></script>
   </head>
 
 <body>
+    <div id="category">meat</div>
     <div id="header">
         <nav class="navbar" role="navigation" aria-label="main navigation">
           <div class="container mt-3">
@@ -76,16 +76,16 @@
                 </a>
               </li>
               <li class="menu menu2">
-                <a href="/product/meat">고기</a>
+                <a id="meat">고기</a>
               </li>
               <li class="menu menu3">
-                <a href="/product/vegetable">채소</a>
+                <a id="vegetable">채소</a>
               </li>
               <li class="menu menu4">
-                <a href="/product/fruit">과일</a>
+                <a id="fruit">과일</a>
               </li>
               <li class="menu menu5">
-                <a href="/product/fish">생선</a>
+                <a id="fish">생선</a>
               </li>
             </ul>
           </div>
@@ -111,7 +111,7 @@
       </div>
       <div id="list_products">
         <div id="inner_list_products">
-              <div class="item">
+              <!-- <div class="item">
                 <div class="thumbnail" >
                   <a href="">
                     <img src="https://img-cf.kurly.com/shop/data/goods/1637929148186l0.jpeg" alt="타코야키" >
@@ -127,99 +127,10 @@
                     <span>원</span>
                   </div>
                 </div>
-              </div>
-              <div class="item">
-                <div class="thumbnail" >
-                  <a href="">
-                    <img src="https://img-cf.kurly.com/shop/data/goods/1637929148186l0.jpeg" alt="타코야키" >
-                  </a>
-                </div>
-                <div class="shopping_cart">
-                  <button class="shopping_cart_icon"><img src="https://s3.ap-northeast-2.amazonaws.com/res.kurly.com/kurly/ico/2021/cart_white_45_45.svg" alt="카트담기 아이콘" ></button>
-                </div>
-                <div class="description">
-                  <h3 class="description_text"><a href="">[고기나라] 고기고기</a></h3>
-                  <div class="price">
-                    10,000
-                    <span>원</span>
-                  </div>
-                </div>
-              </div>
-              <div class="item">
-                <div class="thumbnail" >
-                  <a href="">
-                    <img src="https://img-cf.kurly.com/shop/data/goods/1637929148186l0.jpeg" alt="타코야키" >
-                  </a>
-                </div>
-                <div class="shopping_cart">
-                  <button class="shopping_cart_icon"><img src="https://s3.ap-northeast-2.amazonaws.com/res.kurly.com/kurly/ico/2021/cart_white_45_45.svg" alt="카트담기 아이콘" ></button>
-                </div>
-                <div class="description">
-                  <h3 class="description_text"><a href="">[고기나라] 고기고기</a></h3>
-                  <div class="price">
-                    10,000
-                    <span>원</span>
-                  </div>
-                </div>
-              </div>
-              <div class="item">
-                <div class="thumbnail" >
-                  <a href="">
-                    <img src="https://img-cf.kurly.com/shop/data/goods/1637929148186l0.jpeg" alt="타코야키" >
-                  </a>
-                </div>
-                <div class="shopping_cart">
-                  <button class="shopping_cart_icon"><img src="https://s3.ap-northeast-2.amazonaws.com/res.kurly.com/kurly/ico/2021/cart_white_45_45.svg" alt="카트담기 아이콘" ></button>
-                </div>
-                <div class="description">
-                  <h3 class="description_text"><a href="">[고기나라] 고기고기</a></h3>
-                  <div class="price">
-                    10,000
-                    <span>원</span>
-                  </div>
-                </div>
-              </div>
-              <div class="item">
-                <div class="thumbnail" >
-                  <a href="">
-                    <img src="https://img-cf.kurly.com/shop/data/goods/1637929148186l0.jpeg" alt="타코야키" >
-                  </a>
-                </div>
-                <div class="shopping_cart">
-                  <button class="shopping_cart_icon"><img src="https://s3.ap-northeast-2.amazonaws.com/res.kurly.com/kurly/ico/2021/cart_white_45_45.svg" alt="카트담기 아이콘" ></button>
-                </div>
-                <div class="description">
-                  <h3 class="description_text"><a href="">[고기나라] 고기고기</a></h3>
-                  <div class="price">
-                    10,000
-                    <span>원</span>
-                  </div>
-                </div>
-              </div>
-              <div class="item">
-                <div class="thumbnail" >
-                  <a href="">
-                    <img src="https://img-cf.kurly.com/shop/data/goods/1637929148186l0.jpeg" alt="타코야키" >
-                  </a>
-                </div>
-                <div class="shopping_cart">
-                  <button class="shopping_cart_icon"><img src="https://s3.ap-northeast-2.amazonaws.com/res.kurly.com/kurly/ico/2021/cart_white_45_45.svg" alt="카트담기 아이콘" ></button>
-                </div>
-                <div class="description">
-                  <h3 class="description_text"><a href="">[고기나라] 고기고기</a></h3>
-                  <div class="price">
-                    10,000
-                    <span>원</span>
-                  </div>
-                </div>
-              </div>
-
-          </ul>
+              </div> -->
         </div>
       </div>
     </section>
-
-
     
       <!-- footer -->
     <footer class="footer">
@@ -265,5 +176,7 @@
   
       </div>
     </footer>
+    
+    <script src="../../product.js"></script>
 </body>
 </html>
