--- a/src/views/product.css
+++ b/src/views/product.css
@@ -6,6 +6,9 @@
     list-style:none;
   }
   
+  #category {
+    display: none;
+  }
   /* header */
   /* 
   .navbar .container .navbar-brand .navbar-item .has-text-link {
@@ -36,7 +39,7 @@
     white-space: nowrap;
     /* padding: 16px 0 0 0; */
   }
-  .menu_list .menu a:hover {
+  .menu_list .menu span:hover {
     color: #68a790;
     background-color: transparent;
     text-decoration: underline;
